fix: arruma z-index do toast

--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -5,7 +5,7 @@
   position: absolute;
   right: 10px;
   top: 70px;
-  z-index: 1000;
+  z-index: 0;
   padding: 15px;
   word-break: break-word;
   color: #fff;
@@ -40,6 +40,7 @@
   50% {
     opacity: 1;
     transform: translateY(0);
+    z-index: 1000;
   }
   100% {
     opacity: 0;
